# api-only/openapi.yml
@@ -142,7 +142,25 @@ paths:
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/Problem"
+                additionalProperties: true
+                properties:
+                  detail:
+                    type: string
+                  instance:
+                    type: string
+                  status:
+                    maximum: 599
+                    minimum: 100
+                    type: integer
+                  title:
+                    type: string
+                  type:
+                    type: string
+                required:
+                  - type
+                  - title
+                  - status
+                type: object
 components:
   schemas:
     Problem:
